@@ -704,3 +704,4 @@ v0.76.3.1:
 	- Fixed overwriting of config.yml.
 v0.76.3.2:
 	- Code change due to PEX changing .has() to static (PEX 1.15).
+	- Animals in towns can now only be killed by residents of that town. Unless PVP is enabled.
